--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,4 +1,6 @@
 .home {
+    padding-top: 85px;
+
     form {
         font-size: 1.5rem;
         margin: 20px 0;
@@ -21,17 +23,38 @@
         }
     }
 
-    & > h1 {
+    &>h1 {
         font-size: 3rem;
     }
 
     .see-more {
-        color: #000;
-        text-decoration: none;
-        font-size: 1.5rem;
+        button {
+            color: #000;
+            text-decoration: none;
+            font-size: 1.5rem;
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+            margin: 20px 0;
 
-        &:hover {
-            text-decoration: underline;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .home {
+        form {
+            input {
+                width: 75%;
+                font-size: 1rem;
+            }
+
+            i {
+                font-size: 1.25rem;
+            }
         }
     }
 }
