--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -9,15 +9,31 @@
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
     transition: 0.3s ease;
 
-    &:hover {
-        .your-rating-section {
-            opacity: 1;
-        }
-    }
-
     h1 {
         background-color: #fff;
         padding: 5px 0;
+    }
+
+    .overview {
+        opacity: 0;
+        z-index: -1;
+        position: absolute;
+        bottom: 50%;
+        left: 50%;
+        transform: translate(-50%, 50%);
+        background-color: #fff;
+        width: 75%;
+        padding: 15px;
+
+        .close-overview-btn {
+            margin: 10px auto 0;
+            padding: 5px 15px;
+            color: #000;
+            text-transform: uppercase;
+            background-color: #fff;
+            border: 1px solid #FE6D00;
+            cursor: pointer;
+        }
     }
 
     .rating {
@@ -32,32 +48,21 @@
         font-weight: 500;
     }
 
-    .your-rating-section {
+    .more-info-btn {
         opacity: 0;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         background-color: #fff;
-        padding: 10px 0 20px;
+        padding: 10px 20px;
+        border: none;
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
         transition: opacity 0.3s ease;
-        
-        p {
-            margin-bottom: 10px;
-        }
-
-        .your-rating {
-            border: 1px solid #000;
-            text-align: center;
-            padding: 5px 0;
-            font-size: 1.5rem;
-            width: 50%;
-
-            &:focus {
-                outline: none;
-            }
-        }
+        font-size: 1.5rem;
+        color: #FE6D00;
+        cursor: pointer;
+        z-index: -1;
     }
 }
 
@@ -69,6 +74,37 @@
 
 @media (max-width: 900px) {
     .movie-card {
-        flex: 1 1 100%;
+        cursor: pointer;
+
+        h1 {
+            font-size: 1.2rem;
+        }
+
+        .rating {
+            font-size: 1rem;
+        }
+
+        .more-info-btn {
+            opacity: 1;
+            z-index: 30;
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .movie-card {
+        height: 400px;
+    }
+
+    .overview {
+        font-size: 0.8rem;
+        width: 100%;
+    }
+}
+
+@media (max-width: 400px) {
+    .movie-card {
+        margin: 20px;
+        height: 300px;
     }
 }
